@startuml class_diagram
class Student {
    -id
    -firstName
    -lastName
}

class Class {
    -id
    -academicYear
    -shortName
    +addStudent(student)
    +addTeachingPeriod(teachingPeriod)
    +setEducationUnit(educationUnit)
    +setTeacher(teacher)
}

class TeachingPeriod {
    -id
    -date
    -beginning
    -end
}

class EducationUnit {
    -id
    -name
}

class Teacher {
    -id
    -firstName
    -lastName
}

Student --o Class
Class -- Teacher
EducationUnit -- Class
Class o-- TeachingPeriod

@enduml
